updating about me

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -15,6 +15,7 @@ style: home
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <p>dotInceptions is a modern IT operations consultancy in Houston, Texas.</p>
+        <p>I began dotInceptions as a consulting company to work on projects when I had free time. It's allowed me to pick and choose projects that specifically interest me and provide me with opportunities to learn new languages and frameworks.</p>
         <p>We work with clients to build modern service architectures, operations automation, and software delivery pipelines. We also build open source tools for the automation of systems engineering.</p>
 
         <p>We are excited by the future of cloud infrastructure and systems automation and that drives our mission to help implement strategic and tactical initiatives of startups, early stage growth and SMB companies.
