--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -1,15 +1,14 @@
 :main {
-    --prm: #00A6CE;
-    --sec: #57565A;
-    --ter: #01d1d1;
+    --prm-bg: #00A6CE;
+    --sec-bg: #57565A;
+    --ter-bg: #32292F;
 }
 body {
   font-family: Roboto;
   font-size: 16px;
   line-height: 20px;
   background-color: #fff;
-/*  color: #57565A;*/
-  color: var(--sec);
+  color: var(--sec-bg);
 }
 
 p {
@@ -42,7 +41,7 @@ p {
   width: 940px;
 }
 footer {
-    background-color: #32292F;
+    background-color: var(--ter-bg);
     color: #9D9BA0;
     text-align: center;
     padding: 80px;
@@ -63,7 +62,7 @@ a {
 a:hover,
 a.active,
 a:active {
-  color: #00A6CE;
+  color: var(--prm-bg);
 }
 
 .muted {
@@ -84,13 +83,11 @@ h2 {
 }
 
 .bg-gray {
-/*	background: #57565A !important;*/
-	background: var(--sec) !important;
+	background: var(--sec-bg) !important;
 	color: #fff;
 }
 .bg-blue {
-/*	background: #00A6CE;*/
-	background: var(--prm);
+	background: var(--prm-bg);
 	color: #fff;
 }
 .btn {
@@ -100,7 +97,7 @@ h2 {
 .btn-info:hover,
 .btn-info:active,
 .btn-info:visited {
-	background-color: #00A6CE;
+	background-color: var(--prm-bg);
 	box-shadow: 2px 2px 3px rgba(0,0,0, .2);
 }
 
@@ -120,31 +117,38 @@ header {
 	width: 100%;
 	height: 100px;
 	background-color: #fff;
-	border-bottom: 3px solid #00A6CE;
+	border-bottom: 3px solid var(--prm-bg);
 	-webkit-transition: height 0.3s;
 	-moz-transition: height 0.3s;
 	-ms-transition: height 0.3s;
 	-o-transition: height 0.3s;
 	transition: height 0.3s;
 }
+
 header nav {
 	display: inline-block;
 	text-transform: uppercase;
 }
-    header nav a {
-      padding: 20px;
-      font-weight: 500;
-      font-size: 15px;
-      -webkit-transition: all 0.3s;
-      -moz-transition: all 0.3s;
-      -ms-transition: all 0.3s;
-      -o-transition: all 0.3s;
-      transition: all 0.3s; }
-      header nav a, header nav a:visited {
-        color: #666; }
-    header nav li {
-      float: left;
-      display: inline-block;
-      height: 100px;
-      line-height: 85px;
-      vertical-align: middle; }
+
+header nav a {
+	padding: 20px;
+	font-weight: 500;
+	font-size: 15px;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-ms-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+header nav a, header nav a:visited {
+	color: #666;
+}
+
+header nav li {
+	float: left;
+	display: inline-block;
+	height: 100px;
+	line-height: 85px;
+	vertical-align: middle;
+}
