using full display width

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -74,7 +74,8 @@ section {
 	padding-top: 50px;
 	padding-bottom: 50px;
 }
-.container { width: 940px;}
+/*.container { width: 940px;}*/
+.container { width: 100%;}
 
 nav a i { vertical-align: text-top !important;}
 .nav-container {
